tests/positive/numeric_type_cast.rkl
(print "$0" (= 1 True))
(print "$0" (= 0 True))
(print "$0" (= 1 False))
(print "$0" (= 0 False))

(print "$0" (+ 1 False True 2 3 True 1 -1 -2))
(print "$0" (- 1 2 3))
