tests/negative/for_not_list.rkl
(for v In 42 (print "$0" v))
